[gd_scene load_steps=2 format=3 uid="uid://dfb6tk3jaqp55"]

[ext_resource type="Script" uid="uid://bvlixr8kl6y2q" path="res://systems/music_sfx/music.gd" id="1_y31cj"]

[node name="Music" type="Node2D"]
script = ExtResource("1_y31cj")

[node name="Depth1" type="AudioStreamPlayer2D" parent="."]
bus = &"Music"

[node name="Depth2" type="AudioStreamPlayer2D" parent="."]
bus = &"Music"

[node name="Depth3" type="AudioStreamPlayer2D" parent="."]
bus = &"Music"
